--- a/app/src/main/res/layout/activity_home_norm.xml
+++ b/app/src/main/res/layout/activity_home_norm.xml
@@ -14,13 +14,14 @@
         android:layout_gravity="center_horizontal"
         android:src="@mipmap/ic_launcher"
         android:scaleType="centerCrop"
+        android:visibility="invisible"
         android:layout_marginTop="@dimen/dp80"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="普通登录页"
+        android:text="米奇妙妙屋"
         android:layout_marginTop="@dimen/dp30"
         android:textSize="@dimen/dp18"
         android:textStyle="bold"
