--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,6 +48,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Dialog"/>
+
+        <Button
+            android:id="@+id/tv_ssq"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="来一发"/>
+
     </LinearLayout>
 
 
